--- a/task/git-simple-catalog-2/git-simple-catalog-2.yaml
+++ b/task/git-simple-catalog-2/git-simple-catalog-2.yaml
@@ -19,4 +19,4 @@ spec:
       image: alpine
       script: |
         #!/bin/sh
-        echo "Hello World git-simple-2 V2"   
+        echo "Hello World git-simple-2 V2 updated"   
